# petzold-pw5e

./: .gitattributes  .gitignore  CMakeLists.txt  Petzold-nostrict.props  Petzold-strict-lean_and_mean.props  Programming Windows.sln  README.md  check.py
Chap01/HelloMsg/: HelloMsg.c
Chap02/ScrnSize/: ScrnSize.c  ScrnSize.vcxproj  ScrnSize.vcxproj.filters
Chap03/HelloWin/: HelloWin.c  HelloWin.vcxproj
Chap04/SysMets1/: SysMets.h  SysMets1.c  SysMets1.vcxproj  SysMets1.vcxproj.filters
Chap04/SysMets2/: SysMets2.c  SysMets2.vcxproj  SysMets2.vcxproj.filters
Chap04/SysMets3/: SysMets3.c  SysMets3.vcxproj  SysMets3.vcxproj.filters
Chap05/AltWind/: AltWind.c  AltWind.vcxproj  AltWind.vcxproj.filters
Chap05/Bezier/: Bezier.c  Bezier.vcxproj  Bezier.vcxproj.filters
Chap05/Clover/: Clover.c  Clover.vcxproj  Clover.vcxproj.filters
Chap05/DevCaps1/: DevCaps1.c  DevCaps1.vcxproj  DevCaps1.vcxproj.filters
Chap05/LineDemo/: LineDemo.c  LineDemo.vcxproj  LineDemo.vcxproj.filters
Chap05/RandRect/: RandRect.c  RandRect.vcxproj  RandRect.vcxproj.filters
Chap05/SineWave/: SineWave.c  SineWave.vcxproj  SineWave.vcxproj.filters
Chap05/WhatSize/: WhatSize.c  WhatSize.vcxproj  WhatSize.vcxproj.filters
Chap06/KeyView1/: KeyView1.c  KeyView1.vcxproj  KeyView1.vcxproj.filters
Chap06/KeyView2/: KeyView2.c  KeyView2.vcxproj  KeyView2.vcxproj.filters
Chap06/StokFont/: StokFont.c  StokFont.vcxproj  StokFont.vcxproj.filters
Chap06/SysMets4/: SysMets4.c  SysMets4.vcxproj  SysMets4.vcxproj.filters
Chap06/Typer/: Typer.c  Typer.vcxproj  Typer.vcxproj.filters
Chap07/BlokOut1/: BlokOut1.vcxproj  BlokOut1.vcxproj.filters
Chap07/BlokOut2/: BlokOut2.c  BlokOut2.vcxproj  BlokOut2.vcxproj.filters
Chap07/Checker1/: Checker1.vcxproj  Checker1.vcxproj.filters
Chap07/Checker2/: Checker2.vcxproj  Checker2.vcxproj.filters
Chap07/Checker3/: Checker3.c  Checker3.vcxproj  Checker3.vcxproj.filters
Chap07/Checker4/: Checker4.c  Checker4.vcxproj  Checker4.vcxproj.filters
Chap07/Connect/: Connect.c  Connect.vcxproj  Connect.vcxproj.filters
Chap07/Sysmets5/: SysMets.c  SysMets5.c  Sysmets5.vcxproj  Sysmets5.vcxproj.filters
Chap08/Beeper1/: Beeper1.c  Beeper1.vcxproj  Beeper1.vcxproj.filters
Chap08/Beeper2/: Beeper2.c  Beeper2.vcxproj  Beeper2.vcxproj.filters
Chap08/Clock/: Clock.c  Clock.vcxproj  Clock.vcxproj.filters
Chap08/DigClock/: DigClock.c  DigClock.vcxproj  DigClock.vcxproj.filters
Chap08/WhatClr/: WhatClr.c  WhatClr.vcxproj  WhatClr.vcxproj.filters
Chap09/BtnLook/: BtnLook.c  BtnLook.vcxproj
Chap09/Colors1/: Colors1.c  Colors1.vcxproj
Chap09/Environ/: Environ.c  Environ.vcxproj  Environ.vcxproj.filters
Chap09/Head/: Head.c  Head.vcxproj
Chap09/OwnDraw/: OwnDraw.c  OwnDraw.vcxproj
Chap09/PopPad1/: PopPad1.c  PopPad1.vcxproj  PopPad1.vcxproj.filters
Chap10/IconDemo/: IconDemo.c  IconDemo.vcxproj  IconDemo.vcxproj.filters
Chap10/MenuDemo/: MenuDemo.c  MenuDemo.vcxproj  MenuDemo.vcxproj.filters
Chap10/NoPopups/: NoPopups.c  NoPopups.vcxproj  NoPopups.vcxproj.filters
Chap10/PoePoem/: PoePoem.c  PoePoem.vcxproj  PoePoem.vcxproj.filters
Chap10/PoorMenu/: PoorMenu.c  PoorMenu.vcxproj  PoorMenu.vcxproj.filters
Chap10/PopMenu/: PopMenu.c  PopMenu.vcxproj  PopMenu.vcxproj.filters
Chap10/PopPad2/: PopPad2.c  PopPad2.vcxproj  PopPad2.vcxproj.filters
Chap11/About1/: About1.c  About1.vcxproj  About1.vcxproj.filters
Chap11/About2/: About2.c  About2.vcxproj  About2.vcxproj.filters
Chap11/About3/: About3.c  About3.vcxproj  About3.vcxproj.filters
Chap11/Colors2/: Colors2.c  Colors2.vcxproj  Colors2.vcxproj.filters
Chap11/Colors3/: Colors3.c  Colors3.vcxproj  Colors3.vcxproj.filters
Chap11/HexCalc/: HexCalc.c  HexCalc.vcxproj  HexCalc.vcxproj.filters
Chap11/PopPad3/: PopFile.c  PopFont.c  PopPad.c  PopPad.h  PopPad3.vcxproj  PopPad3.vcxproj.filters  PopPrntNull.c
Chap12/ClipText/: ClipTest.vcxproj  ClipTest.vcxproj.filters  ClipText.c
Chap12/ClipView/: ClipView.c  ClipView.vcxproj  ClipView.vcxproj.filters
Chap13/DevCaps2/: DevCaps2.c  DevCaps2.vcxproj  DevCaps2.vcxproj.filters
Chap13/FormFeed/: FormFeed.c  FormFeed.vcxproj  FormFeed.vcxproj.filters
Chap13/PopPad4/: PopPad4.vcxproj  PopPad4.vcxproj.filters  PopPrnt.c
Chap13/Print1/: Print.c  Print1.c  Print1.vcxproj  Print1.vcxproj.filters
Chap13/Print2/: Print2.c  Print2.vcxproj  Print2.vcxproj.filters
Chap13/Print3/: Print3.vcxproj  Print3.vcxproj.filters
Chap14/BitBlt/: BitBlt.c  BitBlt.vcxproj  BitBlt.vcxproj.filters
Chap14/BitMask/: BitMask.c  BitMask.rc  BitMask.vcxproj  BitMask.vcxproj.filters
Chap14/Blowup/: Blowup.c  Blowup.vcxproj  Blowup.vcxproj.filters
Chap14/Bounce1/: Bounce1.c  Bounce1.vcxproj  Bounce1.vcxproj.filters
Chap14/Bricks1/: Bricks1.c  Bricks1.vcxproj  Bricks1.vcxproj.filters
Chap14/Bricks2/: Bricks2.c  Bricks2.vcxproj  Bricks2.vcxproj.filters
Chap14/Bricks3/: Bricks3.c  Bricks3.vcxproj  Bricks3.vcxproj.filters
Chap14/GrafMenu/: GrafMenu.c  GrafMenu.vcxproj  GrafMenu.vcxproj.filters
Chap14/HelloBit/: HelloBit.c  HelloBit.vcxproj  HelloBit.vcxproj.filters
Chap14/Scramble/: Scramble.vcxproj  Scramble.vcxproj.filters
Chap14/Sketch/: Sketch.c  Sketch.vcxproj  Sketch.vcxproj.filters
Chap14/Stretch/: Stretch.c  Stretch.vcxproj  Stretch.vcxproj.filters
Chap15/Apollo11/: Apollo11.c  Apollo11.vcxproj  Apollo11.vcxproj.filters
Chap15/DibConv/: DibConv.c  DibConv.vcxproj  DibConv.vcxproj.filters
Chap15/DibHeads/: DibHeads.c  DibHeads.vcxproj  DibHeads.vcxproj.filters
Chap15/DibSect/: DibSect.c  DibSect.vcxproj  DibSect.vcxproj.filters
Chap15/SeqDisp/: SeqDisp.c  (+2 more)
Chapter 05 Basic Drawing/: AltWind.c  Bezier.c  Clover.c  LineDemo.c  RandRect.c  SineWave.c  WhatSize.c
Chapter 06 The Keyboard/: KeyView1.c  KeyView2.c  StokFont.c  SysMets4.c  Typer.c
Chapter 07 The Mouse/: BlokOut1.c  BlokOut2.c  Checker1.c  Checker2.c  Checker3.c  Checker4.c  Connect.c  SysMets.c  SysMets5.c
Chapter 08 The Timer/: Beeper1.c  Beeper2.c  Clock.c  DigClock.c  WhatClr.c
Chapter 21 Dynamic-Link Libraries/EdrTest/: CMakeLists.txt  EdrLib.c  EdrTest.c
(+485 files in other folders)
